--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     align-items: center;
     margin-bottom: 20px;
 } 
-.dalies-app h2 img{   /*   <---- img not responding to css */
+.sun11{
     width: 30px;
     margin-left: 30px;
 }
